--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
   "author": "AutoFt",
   "license": "MIT",
   "private": false,
-  "peerDependencies": {
-    "element-plus": "*"
-  },
+  "peerDependencies": {},
   "dependencies": {
-    "async": "^3.2.0",
     "commander": "^6.2.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -25,8 +22,7 @@
     "@types/gulp-autoprefixer": "^0.0.32",
     "@types/gulp-rename": "^2.0.0",
     "@types/gulp-sass": "^4.0.0",
-    "@types/node": "^14.14.20",
-    "element-plus": "^1.0.1-beta.22"
+    "@types/node": "^14.14.20"
   },
   "bin": {
     "et": "./lib/bin/element-theme.js"
