--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "git@github.com:AutoFt/element-theme-plus-ts.git"
+    "url": "git@github.com:AutoFt/et-plus.git"
   },
   "dependencies": {
     "commander": "^6.2.1",
